--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,22 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This app is basically a fullStack project with a great UI in which users can create life goals with help of amazing vision board images and also share goals with other users. Users can also save, edit and delete goals. Users have permission to add new pictures in the vision board which help to create more focused goals. The purpose of this project is to improve learning skills and to show my abilities to recruiter industries. How I designed this project and which technologies I used in this project. It can be understood with the help of a full architecture block diagram."
     />
+    <meta name="keywords" content="viziplan, fullstack, life goals, vision board, images, future planning, hire me, software developer">
+    <meta name="author" content="Atif Tariq">
+    <meta name="robots" content="index, follow">
+
+      <!-- Open Graph Tags for Facebook -->
+      <meta property="og:title" content="ViziPlan - Vision Board for your life goals!">
+      <meta property="og:description" content="This app is basically a fullStack project with a great UI in which users can create life goals with help of amazing vision board images and also share goals with other users. Users can also save, edit and delete goals. Users have permission to add new pictures in the vision board which help to create more focused goals. The purpose of this project is to improve learning skills and to show my abilities to recruiter industries. How I designed this project and which technologies I used in this project. It can be understood with the help of a full architecture block diagram.">
+      <meta property="og:url" content="https://viziplan-fe.web.app/">
+
+      <!-- Twitter Card Tags for Twitter -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:title" content="ViziPlan - Vision Board for your life goals!">
+      <meta name="twitter:description" content="This app is basically a fullStack project with a great UI in which users can create life goals with help of amazing vision board images and also share goals with other users. Users can also save, edit and delete goals. Users have permission to add new pictures in the vision board which help to create more focused goals. The purpose of this project is to improve learning skills and to show my abilities to recruiter industries. How I designed this project and which technologies I used in this project. It can be understood with the help of a full architecture block diagram.">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
